--- a/src/css/common.css
+++ b/src/css/common.css
@@ -16,3 +16,25 @@ img {
   display: block;
   max-width: 100%;
 }
+
+.timer {
+  display: flex;
+  align-items: center;
+  justify-content: space-evenly;
+  margin-top: 10px;
+}
+
+.field {
+  display: flex;
+}
+
+.value {
+  font-size: xx-large;
+  color: blue
+}
+
+.label {
+  font-style: italic;
+  margin-left: 10px;
+  color: tomato
+}
